# midi2vjoy

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: main.cpp  midi.cpp  midi.h  rotary.cpp  rotary.h  worker.cpp  worker.h
